name:                cracking
version:             0.0.1
description:         Cracking the Coding Interview
synopsis:            Cracking the Coding Interview
homepage:            https://github.com/uldissturms/cracking-the-coding-interview
license:             MIT
author:              Uldis Sturms
maintainer:          uldis.sturms@gmail.com
category:            Coding
build-type:          Simple
cabal-version:       >=1.8

executable cracking
  main-is:           Main.hs
  build-depends:     hspec
